# rapkanalyser

./: .gitignore  Cargo.toml  README.md
abxml/: README.md
src/: apk_analyzer.rs  byte_stream.rs  lib.rs  sdk_constants.rs
src/analyzer/: apk_size_calculator.rs  archive.rs  archive_manager.rs  archive_tree_node.rs  archive_tree_structure.rs  archives.rs  mod.rs
src/analyzer/dex/: dex_class_node.rs  dex_field_node.rs  dex_file.rs  dex_file_stats.rs  dex_method_node.rs  dex_package_node.rs  mod.rs  package_tree_creator.rs
src/arsc/: binary_resource_file.rs  chunk.rs  chunk_header.rs  mod.rs  package.rs  resource.rs  string_table.rs  table_type.rs  table_type_spec.rs  xml.rs  xml_chunk.rs
src/binary_xml/: binary_xml_parser.rs  mod.rs
src/manifest/: android_manifest.rs  android_manifest_parser.rs  manifest_data.rs  mod.rs
tests/resources/apk/: app_with_virtual_entries.apk  app_with_virtual_entry.apk  mapping.txt
