[package]
name = "rapkanalyser"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
flate2 = "1.0" # A streaming compression/decompression library DEFLATE-based streams in Rust.

lazy_static = "1.4.0"
xml5ever = "0.1.3"
markup5ever = "0.10.0"
byteorder = "1"

failure = "0.1.8"

dex = "0.4.0"
memmap = "0.7.0"

multi-map = "1.3.0"

tempfile = "3"

[dependencies.abxml]
path = "abxml"

[dependencies.getset]
version = "0.0.9"

[lib]
path = "src/lib.rs"
name = "analyser"

[workspace]
members = [
    "abxml",
]
